Feat : Create Lv1 Feature Lv1 기능 추가 - 일정 생성 - 전체 일정 조회   - 작성자명과 수정일을 조건으로 조회   - 조건중 한 가지만 충족하거나, 둘 다 충족할 수도, 둘 다 충족하지 않을     수도 있음 - 선택 일정 조회   - 일정의 ID로 조회

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,12 @@ out/
 
 ### VS Code ###
 .vscode/
+.gitattributes
+gradlew
+build.gradle
+gradlew.bat
+settings.gradle
+.gradle
+gradle
+.gitmessage.txt
+.gitignore
