--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+application.properties
 
 ### NetBeans ###
 /nbproject/private/
@@ -40,7 +41,6 @@ gradlew
 build.gradle
 gradlew.bat
 settings.gradle
-.gradle
 gradle
 .gitmessage.txt
 .gitignore
